[UPD] Added 2 img and basic css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Dom 1</title>
+    <title>JS Dom 1 </title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <main>
+        <div class="d-flex direction-column mx-auto wrap w-50 align-items-center">
+            <h1>JS Dom  1</h1>
+
+            <div>
+                <img src="./img/white_lamp.png" alt="" id="lamp-off" class="d-block">
+                <img src="./img/yellow_lamp.png" alt="" id="lamp-on" class="d-block">
+            </div>
+        
+        </div>
+        
+    </main>
     <script src="./js/script.js"></script>
 </body>
 </html>
