[UPD] Added button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 <img src="./img/white_lamp.png" alt="" id="lamp-off" class="d-block">
                 <img src="./img/yellow_lamp.png" alt="" id="lamp-on" class="d-block">
             </div>
+
+            <div>
+                <button class="btn">Accendi</button>
+            </div>
         
         </div>
         
