--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <div>
                 <img src="./img/white_lamp.png" alt="" id="lamp-off" class="d-block">
-                <img src="./img/yellow_lamp.png" alt="" id="lamp-on" class="d-block">
+                <img src="./img/yellow_lamp.png" alt="" id="lamp-on" class="d-none">
             </div>
 
             <div>
